--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest, debain, darwin
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
